# Streamly

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamly.py  streamly_gui.py
packaging/windows/: streamly.iss
scripts/: build_linux.sh  build_windows.ps1  install_linux.sh
